#106 - update openapi of  authservice
